# test_ta_da

./: README.md  pyproject.toml
test_ta_da/: __main__.py  main.py
test_ta_da/api/: articles_router.py
test_ta_da/core/: database.py  dependencies.py
test_ta_da/models/: articles.py
test_ta_da/repositories/: articles.py
test_ta_da/schemas/: articles.py
tests/: conftest.py
tests/api/: test_article_lifecycle.py  test_articles_router.py
