[tool.poetry]
name = "test-ta-da"
version = "0.1.0"
description = ""
authors = ["Jeremy <ferrer.jeremy3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
uvicorn = {version = "^0.29.0", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
schemathesis = "^3.27.0"
ruff = "^0.4.1"
mypy = "^1.9.0"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
